Added link and unlink endpoints to the api
