# lib/models/app-user.js
@@ -81,10 +81,63 @@ AppUserSchema.statics.connect = function connect(application, provider, profile)
             }
 
             if (!user.isConnected(provider)) {
-                return user.link(application, provider, profile);
+                return user.link(provider, profile._json);
             }
 
             return user;
+        })
+        .then((user) => application.issueToken(user.toObject()));
+};
+
+AppUserSchema.statics.link = function link(id, application, provider, profile, idToRemove) {
+    return this
+        .findOne({
+            _id: id
+        })
+        .then((user) => {
+            if (user === null || typeof user === 'undefined') {
+                const error = new Error(`The user ${id} was not found.`);
+                error.status = 404;
+                throw error;
+            }
+
+            if (user.isConnected(provider)) {
+                const error = new Error('The user had already linked a ${provider} account.');
+                error.status = 401;
+                throw error;
+            }
+
+            return user.link(provider, profile);
+        })
+        .then((user) => {
+            return this
+                .remove({
+                    _id: idToRemove
+                })
+                .then(() => user);
+        })
+        .then((user) => application.issueToken(user.toObject()));
+};
+
+AppUserSchema.statics.unlink = function unlink(id, application, provider) {
+    return this
+        .findOne({
+            _id: id
+        })
+        .then((user) => {
+            if (user === null || typeof user === 'undefined') {
+                const error = new Error(`The user ${id} was not found.`);
+                error.status = 404;
+                throw error;
+            }
+
+            if (!user.isConnected(provider)) {
+                const error = new Error(`The user hasn't a linked ${provider} account.`);
+                error.status = 401;
+                throw error;
+            }
+
+            return user.unlink(provider);
         })
         .then((user) => application.issueToken(user.toObject()));
 };
@@ -111,15 +164,21 @@ AppUserSchema.methods.isConnected = function isConnected(provider) {
     return this.identities.some((identity) => identity.provider === provider);
 };
 
-AppUserSchema.methods.link = function link(application, provider, profile) {
+AppUserSchema.methods.link = function link(provider, profile) {
     this.identities.push({
         provider:    provider,
-        userId:      profile._json.id,
+        userId:      profile.id,
         isSocial:    true,
         connection:  provider,
-        profileData: profile._json
+        profileData: profile
     });
 
+    return this.save();
+};
+
+AppUserSchema.methods.unlink = function unlink(provider) {
+    const index = this.identities.map((identity) => identity.provider).indexOf(provider);
+    this.identities.splice(index, 1);
     return this.save();
 };
 
