# lib/models/app.js
@@ -13,12 +13,6 @@ const AppSchema = new mongoose.Schema({
         required: true,
         unique:   true
     },
-    clientId: {
-        type:     String,
-        required: true,
-        unique:   true,
-        indexed:  true
-    },
     clientSecret: {
         type:     String,
         required: true,
@@ -72,15 +66,15 @@ AppSchema.statics.fromUser = function fromUser(id) {
         .then((docs) => docs.map((doc) => doc._id));
 };
 
-AppSchema.statics.validate = function validate(clientId, provider) {
+AppSchema.statics.validate = function validate(id, provider) {
     return this
         .findOne({
-            clientId
+            _id: id
         })
         .exec()
         .then((application) => {
             if (application === null || typeof application === 'undefined') {
-                const error = new Error(`Application ${clientId} not found.`);
+                const error = new Error(`Application ${id} not found.`);
                 error.status = 404;
                 throw error;
             }
@@ -91,7 +85,7 @@ AppSchema.statics.validate = function validate(clientId, provider) {
             const applicationProviders = application.socialConnections.map((socialConnection) => socialConnection.type);
 
             if (!applicationProviders.includes(provider)) {
-                const error = new Error(`Application ${clientId} hasn't set the ${provider} provider.`);
+                const error = new Error(`Application ${id} hasn't set the ${provider} provider.`);
                 error.status = 500;
                 throw error;
             }
@@ -100,8 +94,21 @@ AppSchema.statics.validate = function validate(clientId, provider) {
         });
 };
 
+AppSchema.methods.decodeToken = function decodeToken(jwt) {
+    return new Promise((resolve, reject) => {
+        jsonwebtoken.verify(jwt, this.clientSecret, (error, user) => {
+            if (error) {
+                return reject(error);
+            }
+
+            return resolve(user);
+        });
+    });
+};
+
 AppSchema.methods.issueToken = function issueToken(user) {
-    const issuer = user._id.toString();
+    const id = user._id.toString();
+    user.id = id;
 
     Reflect.deleteProperty(user, '_id');
     Reflect.deleteProperty(user, '__v');
@@ -111,7 +118,7 @@ AppSchema.methods.issueToken = function issueToken(user) {
     }, this.clientSecret, {
         expiresIn: this.jwtExpiration,
         notBefore: '1ms',
-        issuer
+        issuer:    id
     });
 };
 
